<resources>
    <string name="app_name">TimeStopper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timerStr">correct time</string>
    <string name="bestStr">best time</string>
    <string name="timerVal">00:00:00</string>
    <string name="bestVal">05:55:00</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="startButtonLabel">Start</string>




</resources>
